samples/viya-single-container/example_programming.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sas-viya-single-programming-only
spec:
  selector:
    app: sas-viya-single-programming-only
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sas-viya-single-programming-only
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sas-viya-single-programming-only
    spec:
      hostname: sas-viya-single-programming-only
      containers:
      - name: sas-viya-single-programming-only
        image: @REPLACE_ME with location-of-docker-image:tag@
        imagePullPolicy: Always
        ports:
        - containerPort: 5570
        - containerPort: 80
        resources:
          limits:
            cpu: 8
            memory: 8Gi
          requests:
            cpu: 250m
            memory: 4Gi
        volumeMounts:
        - name: cas-volume
          mountPath: /cas/data
        - name: cas-volume
          mountPath: /cas/permstore
        - name: cas-volume
          mountPath: /cas/cache
        - name: data-volume
          mountPath: /data
#        - name: sasinside
#          mountPath: /sasinside
      volumes:
      - name: cas-volume
        emptyDir: {}
      - name: data-volume
        emptyDir: {}
#      - name: sasinside
#        nfs:
#          server: "server-name"
#          path: "path-to-mount"
...
